--- a/docs/development/backend/logging.mdx
+++ b/docs/development/backend/logging.mdx
@@ -1,7 +1,7 @@
 ---
-title: Backend Logging  & Log Level Configuration
+title: Backend Logging & Log Level Configuration
 description: Complete guide to configuring and using log levels in the DeployStack backend for development and production environments.
-sidebar: Backend Development
+sidebar: Logging
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
